workspace-sf/force-app/main/default/objects/RamoAtividade__c/RamoAtividade__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro dos ramos de atividade</description>
    <label>Ramo de atividade</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ramos de atividade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>