workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <label>Blacklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coletivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>