workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/CodigoClasse__c.field-meta.xml
<CustomField>
    <fullName>CodigoClasse__c</fullName>
    <label>Código da classe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>