workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/CodigoDivisao__c.field-meta.xml
<CustomField>
    <fullName>CodigoDivisao__c</fullName>
    <label>Código da divisão</label>
    <length>12</length>
    <type>Text</type>
</CustomField>