workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/CodigoGrupo__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrupo__c</fullName>
    <label>Código do grupo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>