workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/CodigoSecao__c.field-meta.xml
<CustomField>
    <fullName>CodigoSecao__c</fullName>
    <label>Código da seção</label>
    <length>12</length>
    <type>Text</type>
</CustomField>