workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/CodigoSubclasse__c.field-meta.xml
<CustomField>
    <fullName>CodigoSubclasse__c</fullName>
    <label>Código da subclasse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>