workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/GrauRisco__c.field-meta.xml
<CustomField>
    <fullName>GrauRisco__c</fullName>
    <label>Grau de risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>Sem aceitação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>