workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/NomeAtividadeCnae__c.field-meta.xml
<CustomField>
    <fullName>NomeAtividadeCnae__c</fullName>
    <label>Nome Atividade Cnae</label>
    <length>255</length>
    <type>Text</type>
</CustomField>