workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/NomeClasse__c.field-meta.xml
<CustomField>
    <fullName>NomeClasse__c</fullName>
    <label>Nome da classe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>