workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/NomeDivisao__c.field-meta.xml
<CustomField>
    <fullName>NomeDivisao__c</fullName>
    <label>Nome da divisão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>