workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/NomeGrupo__c.field-meta.xml
<CustomField>
    <fullName>NomeGrupo__c</fullName>
    <label>Nome do grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>