workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/NomeSecao__c.field-meta.xml
<CustomField>
    <fullName>NomeSecao__c</fullName>
    <label>Nome da seção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>