workspace-sf/force-app/main/default/objects/RamoAtividade__c/fields/NumeroCnae__c.field-meta.xml
<CustomField>
    <fullName>NumeroCnae__c</fullName>
    <label>Numero Cnae</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>