workspace-sf/force-app/main/default/objects/RamoAtividade__c/validationRules/ValidarEdicaoNome.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarEdicaoNome</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(PRIORVALUE(Name)) || ISNULL(PRIORVALUE(Name)), false, IF(ISCHANGED(Name),true,false))</errorConditionFormula>
    <errorMessage>O nome não pode ser alterado.</errorMessage>
</ValidationRule>