workspace-sf/force-app/main/default/objects/RamoAtividade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoSecao__c</columns>
    <columns>CodigoDivisao__c</columns>
    <columns>CodigoGrupo__c</columns>
    <columns>CodigoClasse__c</columns>
    <columns>CodigoSubclasse__c</columns>
    <columns>GrauRisco__c</columns>
    <columns>Status__c</columns>
    <columns>Blacklist__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os ramos de atividade</label>
</ListView>