workspace-sf/force-app/main/default/objects/RamoAtividade__c/listViews/TodosRamosAtividadesInativos.listView-meta.xml
<ListView>
    <fullName>TodosRamosAtividadesInativos</fullName>
    <columns>NAME</columns>
    <columns>CodigoSecao__c</columns>
    <columns>CodigoDivisao__c</columns>
    <columns>CodigoGrupo__c</columns>
    <columns>CodigoClasse__c</columns>
    <columns>CodigoSubclasse__c</columns>
    <columns>GrauRisco__c</columns>
    <columns>Blacklist__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inativo</value>
    </filters>
    <label>Todos os ramos de atividades inativos</label>
</ListView>